Show 'Close Explorer' button on mobile viewports. Fix #5396 (#5773)
* Rework 'Close Explorer' button css so that it does not rely on u-hidden. Fixes issue #5396
* Update tests due to changed css classes on 'close explorer' button

--- a/client/src/components/Explorer/Explorer.scss
+++ b/client/src/components/Explorer/Explorer.scss
@@ -58,6 +58,7 @@ $menu-footer-height: 50px;
     color: $c-explorer-secondary;
     border-bottom: 1px solid rgba(200, 200, 200, 0.1);
     cursor: pointer;
+    display: none;
 
     &:focus {
         background-color: $c-explorer-bg-active;
